updates to accordion and grid

--- a/ds-grid.html
+++ b/ds-grid.html
@@ -9,7 +9,7 @@
 		<title>Pattern Library - Grid</title>
 	</head>
 	<body>
-		<div class="container">
+		<!-- <div class="container">
 			<div class="grid">
 				<div class="col"><p>COL 1</p></div>
 				<div class="col"><p>COL 2</p></div>
@@ -23,6 +23,14 @@
 				<div class="col"><p>COL 10</p></div>
 				<div class="col"><p>COL 11</p></div>
 				<div class="col"><p>COL 12</p></div>
+			</div>
+		</div> -->
+		<div class="container">
+			<div class="grid col-2-md col-4-lg gap-20">
+				<div class="col"><p>COL</p></div>
+				<div class="col"><p>COL</p></div>
+				<div class="col"><p>COL</p></div>
+				<div class="col"><p>COL</p></div>
 			</div>
 		</div>
 	</body>
