--- a/ds-accordion.html
+++ b/ds-accordion.html
@@ -5,72 +5,92 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="dist/style.min.css" />
-		<script type="module" defer src="dist/script.min.js"></script>
+		<script defer src="dist/script.min.js"></script>
+		<script data-search-pseudo-elements src="https://kit.fontawesome.com/d8135bdf75.js" crossorigin="anonymous"></script>
 		<title>Pattern Library - Accordion</title>
 	</head>
 	<body>
 		<!-- accordion--all-open -->
-		<div class="accordion accordion--all-open">
-			<div class="accordion__item">
-				<div class="accordion__header">
-					<h3 class="accordion__title">
-						<button class="accordion__button">Item Number 1</button>
-					</h3>
+		<div class="container">
+			<h2>Accordion Multi Panels Open</h2>
+			<div class="accordion accordion--all-open" data-accordion="multi-panel">
+				<div class="accordion__item">
+					<div class="accordion__header">
+						<h3 class="accordion__title">
+							<button class="accordion__button">Item Number 1</button>
+						</h3>
+					</div>
+					<div class="accordion__body collapse">
+						<div class="accordion__content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+						</div>
+					</div>
 				</div>
-				<div class="accordion__body">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+				<div class="accordion__item">
+					<div class="accordion__header">
+						<h3 class="accordion__title">
+							<button class="accordion__button">Item Number 2</button>
+						</h3>
+					</div>
+					<div class="accordion__body collapse">
+						<div class="accordion__content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__header">
-					<h3 class="accordion__title">
-						<button class="accordion__button">Item Number 2</button>
-					</h3>
-				</div>
-				<div class="accordion__body">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__header">
-					<h3 class="accordion__title">
-						<button class="accordion__button">Item Number 3</button>
-					</h3>
-				</div>
-				<div class="accordion__body">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+				<div class="accordion__item">
+					<div class="accordion__header">
+						<h3 class="accordion__title">
+							<button class="accordion__button">Item Number 3</button>
+						</h3>
+					</div>
+					<div class="accordion__body collapse">
+						<div class="accordion__content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<div class="accordion">
-			<div class="accordion__item">
-				<div class="accordion__header">
-					<h3 class="accordion__title">
-						<button class="accordion__button">Item Number 1</button>
-					</h3>
+
+		<div class="container">
+			<h2>Accordion Single Panel Open</h2>
+			<div class="accordion" data-accordion="single-panel">
+				<div class="accordion__item">
+					<div class="accordion__header">
+						<h3 class="accordion__title">
+							<button class="accordion__button">Item Number 1</button>
+						</h3>
+					</div>
+					<div class="accordion__body">
+						<div class="accordion__content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+						</div>
+					</div>
 				</div>
-				<div class="accordion__body">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+				<div class="accordion__item">
+					<div class="accordion__header">
+						<h3 class="accordion__title">
+							<button class="accordion__button">Item Number 2</button>
+						</h3>
+					</div>
+					<div class="accordion__body">
+						<div class="accordion__content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__header">
-					<h3 class="accordion__title">
-						<button class="accordion__button">Item Number 2</button>
-					</h3>
-				</div>
-				<div class="accordion__body">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
-				</div>
-			</div>
-			<div class="accordion__item">
-				<div class="accordion__header">
-					<h3 class="accordion__title">
-						<button class="accordion__button">Item Number 3</button>
-					</h3>
-				</div>
-				<div class="accordion__body">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+				<div class="accordion__item">
+					<div class="accordion__header">
+						<h3 class="accordion__title">
+							<button class="accordion__button">Item Number 3</button>
+						</h3>
+					</div>
+					<div class="accordion__body">
+						<div class="accordion__content">
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste!</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
